syntax = "proto3";

package busyness;

option go_package = "../go/go/busyness";

service BusynessPredictor {
  rpc PredictBusyness (BusynessRequest) returns (BusynessResponse);
}

message BusynessRequest {
  int32 location_id = 1;
}

message BusynessResponse {
  string busyness = 1;
}
